tests/should_fail/bug/436_2.stderr
error: encountered a cycle during translation: [Item(DefId(0:7 ~ 436_2[2f9f]::Bad::None), ['{erased}]), Type(creusot_contracts::snapshot::Snapshot<&'{erased} mut Bad<'{erased}>>), Type(Bad<'{erased}>), Item(DefId(0:9 ~ 436_2[2f9f]::Bad::Some), ['{erased}])]
 --> 436_2.rs:5:5
  |
5 |     None,
  |     ^^^^

error: aborting due to 1 previous error

